@@ -1,6 +1,8 @@
 Revision history for Open-This
 
 {{$NEXT}}
+    - Add a -b (browse) option to ot. Also add editor_args_from_parsed_text()
+      and maybe_get_url_from_parsed_text (GH#5) (Olaf Alders)
 
 0.000012  2018-12-03 19:26:46Z
     - Parse line numbers from the fragments of GitHub URLs
